Asignación de coordinadores a eventos
el admin puede asignar eventos

--- a/assets/index.html
+++ b/assets/index.html
@@ -37,7 +37,7 @@
             <br>
              <br>
             Selecciona tu grupo.
-   			<p><select id="event" name="event" style="width:200px; "><option value="2">VERANO MásTravel</option><option value="3">UAEH ICEA Admon.</option></select><a href="javascript:pasarvariable();"><b style="size:25px;">Regístrate</b></a></p>
+   			<p><select id="event" name="event" style="width:250px; "><option value="2">VERANO MásTravel</option><option value="3">UAEH ICEA Admon.</option><option value="4">CEUMH Vallarta Diciembre</option></select><a href="javascript:pasarvariable();"><b style="size:25px;">Regístrate</b></a></p>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
